# Smart_PillBox

./: BUILD.gn  README.md
gn_practice/: README.md
gn_practice/application/: BUILD.gn  app_main.c  component_1.c  component_2.c
gn_practice/driver/: BUILD.gn  drv_1.c
new_app_mix/demo/: BUILD.gn  oled_demo.c
new_app_mix/sle_demo_1v1/: BUILD.gn  sle_client.c  sle_client.h  sle_client_demo.c  sle_server.c  sle_server.h
new_app_mix/src/: oled_ssd1306.c
sle_demo_1v1/: BUILD.gn  README.md  sle_client_demo.c  sle_server.c  sle_server.h  sle_server_adv.c  sle_server_adv.h  sle_server_demo.c  uart_bridge.h
sle_demo_1vn/: BUILD.gn  sle_client_demo.c  sle_server.c  sle_server_demo.c
sle_demo_1vn_k230/: BUILD.gn  sle_client.c  sle_client.h  sle_client_demo.c
sle_demo_1vn_oled/: BUILD.gn  README.md  sle_client.c  sle_client.h  sle_server.c  sle_server.h  sle_server_adv.c  sle_server_demo.c
sle_demo_1vn_oled/src/: oled_ssd1306.c  oled_ssd1306.h
sle_demo_1vn_voice/: BUILD.gn  sle_server.c  sle_server.h  sle_server_adv.h  sle_server_demo.c
startup/: BUILD.gn  README.md  hello.c
stnp/wifi/: wifi_demo.c
test_simple/: BUILD.gn  hello_world.c
uart_test/: BUILD.gn  uart_demo.c  uart_demo.h
uart_test_ready/: uart_demo.c  uart_demo.h
