#*********************************************************************************
# Copyright (c) 2024-2025, Qi Yaolong.
# dragon@hbu.edu.cn
# HeBei University, China.
#
# 保留所有权利。除非遵守以下条款，否则您不得使用此文件：
# 本文件及其内容仅用于个人学习用途，在此范围之外的使用请先获得版权持有人的授权。
#  
# 本程序由版权持有人和贡献人“按原样”提供，不提供任何明示或暗示担保，包括但不局限于对适销性和特定
# 用途适合性的暗示担保。在任何情况下，版权持有人或贡献人对因使用本程序而导致的任何直接、间接、附带、
# 特殊、典型或后果性损害（包括但不限于购买替代商品或服务；使用损失、数据丢失或利润损失；业务中断）
# 不承担任何责任，无论其如何产生，也不论其责任理论为何，无论是合同、严格责任还是侵权（包括疏忽或
# 其他），即使已告知此类损害的可能性。
#*********************************************************************************

static_library("sle_demo_1vn_k230") {
  sources = [
    "sle_client.c", "sle_client_demo.c",                        # SLE客户端
    # "sle_server.c", "sle_server_adv.c", "sle_server_demo.c",  # SLE服务端
  ]
  
  include_dirs = [
    # 基础头文件
    "//base/startup/init/interfaces/innerkits/include",
    "//commonlibrary/utils_lite/include",
    
    # HiSilicon WS63V100 SDK相关头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver/uart",   # 串口驱动头文件
    "//device/soc/hisilicon/ws63v100/sdk/include/driver/pinctrl", # 引脚控制头文件
    "//device/soc/hisilicon/ws63v100/sdk/include/driver/watchdog", # 看门狗头文件
    
    # HAL层头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/uart",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/watchdog",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/pinmux/common",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/drivers/hal/pinmux/ws63",
    
    # 移植层头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/uart",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/watchdog",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/osal",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/soc",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/porting/app",
    
    # OSAL和中间件头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/memory",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/app_init",
    
    # 通用头文件和平台核心头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers",
    "//device/soc/hisilicon/ws63v100/sdk/middleware/utils/common_headers/native",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/include",
    
    # SLE相关头文件路径
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/sle",
    "//foundation/communication/sle",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/adapter/hals/communication/sle_lite/include",
  ]
  
  # 添加编译定义
  defines = [
    "CHIP_WS63=1",
    "CONFIG_UART_SUPPORT_TX=1",
    "CONFIG_UART_SUPPORT_RX=1",
    "ASIC=1",
  ]
  
  # 添加必要的依赖库（避免循环依赖）
  deps = [
    "//build/lite/config/component/cJSON:cjson_static",
  ]
}
