#*********************************************************************************
# Copyright (c) 2024-2025, Qi Yaolong.
# dragon@hbu.edu.cn
# HeBei University, China.
#
# 保留所有权利。除非遵守以下条款，否则您不得使用此文件：
# 本文件及其内容仅用于个人学习用途，在此范围之外的使用请先获得版权持有人的授权。
#  
# 本程序由版权持有人和贡献人“按原样”提供，不提供任何明示或暗示担保，包括但不局限于对适销性和特定
# 用途适合性的暗示担保。在任何情况下，版权持有人或贡献人对因使用本程序而导致的任何直接、间接、附带、
# 特殊、典型或后果性损害（包括但不限于购买替代商品或服务；使用损失、数据丢失或利润损失；业务中断）
# 不承担任何责任，无论其如何产生，也不论其责任理论为何，无论是合同、严格责任还是侵权（包括疏忽或
# 其他），即使已告知此类损害的可能性。
#*********************************************************************************

# 第一次接触.gn文件，注意语法格式
# 
# 做成静态库，"hello_world"是库名称，最终被编译为"libhello_world.a"
static_library("hello_world") {
  # 源文件
  sources = [ "hello.c" ]

  # include目录
  include_dirs = [
    # 包括"ohos_init.h"等头文件
    # "//"表示源码根目录，后面是目录名称
    "//commonlibrary/utils_lite/include",
  ]
}
