#*********************************************************************************
# Copyright (c) 2024-2025, Qi Yaolong.
# dragon@hbu.edu.cn
# HeBei University, China.
#
# 保留所有权利。除非遵守以下条款，否则您不得使用此文件：
# 本文件及其内容仅用于个人学习用途，在此范围之外的使用请先获得版权持有人的授权。
#  
# 本程序由版权持有人和贡献人“按原样”提供，不提供任何明示或暗示担保，包括但不局限于对适销性和特定
# 用途适合性的暗示担保。在任何情况下，版权持有人或贡献人对因使用本程序而导致的任何直接、间接、附带、
# 特殊、典型或后果性损害（包括但不限于购买替代商品或服务；使用损失、数据丢失或利润损失；业务中断）
# 不承担任何责任，无论其如何产生，也不论其责任理论为何，无论是合同、严格责任还是侵权（包括疏忽或
# 其他），即使已告知此类损害的可能性。
#*********************************************************************************

static_library("sle_demo_1v1") {
  sources = [
    #"sle_client.c", "sle_client_demo.c",                        # SLE客户端
    "sle_server.c", "sle_server_adv.c", "sle_server_demo.c",    # SLE服务端
  ]
  
  include_dirs = [
    "//base/startup/init/interfaces/innerkits/include",
    "//device/soc/hisilicon/ws63v100/sdk/include/driver",
    "//device/soc/hisilicon/ws63v100/sdk/drivers/chips/ws63/rom/drivers/chips/ws63/porting/pinctrl",
    "//device/soc/hisilicon/ws63v100/sdk/include/middleware/services/bts/sle",
    "//foundation/communication/sle",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/debug",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/memory",
    "//device/soc/hisilicon/ws63v100/sdk/kernel/osal/include/schedule",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/soc/hisilicon/ws63v100/adapter/hals/communication/sle_lite/include",
  ]
}
